<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_bar_container"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_button_2"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_blue"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:contentDescription="@string/search_icon" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Mau Ke Mana Hari Ini ?"
            android:completionThreshold="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_blue"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/user_icon" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/fab_emergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_location_blue" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/emergency"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_gas_location_blue" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button_2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_home_blue"
            app:tint="@color/blue" />


        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_add_blue"
            app:tint="@color/blue" />


        <ImageButton
            android:id="@+id/btn_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_person_blue"
            app:tint="@color/blue" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>