<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".view.welcome.WelcomeActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="199dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_nusamaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_2"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="#000000"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_2"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="#000000"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_login_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="250dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/blue_darker"
        android:textSize="14sp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_6"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_create_login"
        android:textColor="@color/blue_darker"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or_continue"
        android:textColor="@color/blue_darker"
        android:textSize="14sp" />

    <FrameLayout
        android:id="@+id/buttonlogin"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_sized"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/google"
            android:textColor="@color/blue_darker"
            android:textSize="13sp"
            android:fontFamily="@font/montserrat_semibold"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dont"
        android:textColor="@color/blue_darker"
        android:textSize="14sp" />


</RelativeLayout>