<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_transparent_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/rounded_white_background">

            <TextView
                android:id="@+id/tvRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/title_register"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blue_darker"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRegisterTitle"
                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button_2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_register_email"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button_2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_register_password"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button_2"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/til_register_confirm_password"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_6"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/title_register"
                android:textColor="@color/blue_darker"
                android:textSize="13sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>