<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/search_bar_container"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_button_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_blue"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:contentDescription="@string/search_icon" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Curug Citambur, Cianjur,Jawa Barat"
            android:completionThreshold="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_blue"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/user_icon" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="580dp"
        android:contentDescription="@string/location"
        app:srcCompat="@drawable/ic_location_blue" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="Destination Name"
            android:textColor="@color/blue"
          />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Journey"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_6"/>

        <Button
            android:id="@+id/buttonShowDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Description"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_6"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>